--- a/App_client/Views/FavoriteProducts/Index.cshtml
+++ b/App_client/Views/FavoriteProducts/Index.cshtml
@@ -66,7 +66,7 @@
                         </td>
                         <td>
                             <a asp-controller="Product" asp-action="Details" asp-route-id="@item.ProductID">Chi tiet</a>
-                            <a asp-controller="FavoriteProducts" asp-action="Delete" asp-route-idproduct="@item.ProductID">Xóa</a>
+                            <a asp-controller="FavoriteProducts" asp-action="Delete" asp-route-id="@item.ProductID">Xóa</a>
                         </td>
                     </tr>
                 }
